# QA_GURU_Home_Task_17

./: .gitignore  path.py  pyproject.toml  requirements.txt
QA_guru_16/: pyproject.toml
resourses/: update_user_failed.json
tests/: conftest.py  test_api_regres.py
