[tool.poetry]
name = "qa-guru-16"
version = "0.1.0"
description = "Homework16"
authors = ["Katsuba Igor <kasubaigor@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.2"
selene = "^2.0.0rc6"


[tool.poetry.group.dev.dependencies]
pylint = "^3.2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
